# XLanguage

./: CMakeLists.txt  std_x.x
include/core/: codegen.h  expr_convert.h  expr_evaluator.h  func_convert.h  op_convert.h  type_convert.h
include/lib/: core_types.h  file_helper.h  function.h  operation.h  utils.h  variable.h
include/native/: io.h  std.h
src/: benchmark.c  main.c  test.c
src/core/: codegen.c  expr_convert.c  expr_evaluator.c  func_convert.c  op_convert.c  type_convert.c
src/lib/: file_helper.c  function.c  operation.c  utils.c  variable.c
src/native/: io.c  std.c
